--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,7 @@
         function sendMessage() {
             var messageContent = document.getElementById('chat').value;
             stompClient.send("/app/chat.sendMessage", {}, JSON.stringify({'content': messageContent}));
+            document.getElementById('chat').value = '';
         }
 
         /**
